Bug 258164 - The HTMLPreloadScanner ignores the referrerpolicy attribute for img elements
Summary: The HTMLPreloadScanner ignores the referrerpolicy attribute for img elements
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-06-15 15:03 PDT by Chris Dumez
Modified: 2023-06-15 19:25 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2023-06-15 15:03:30 PDT
The HTMLPreloadScanner ignores the referrerpolicy attribute for img elements.
Comment 1 Chris Dumez 2023-06-15 15:05:07 PDT
Pull request: https://github.com/WebKit/WebKit/pull/15022
Comment 2 EWS 2023-06-15 19:24:13 PDT
Committed 265223@main (2835282d4f21): <https://commits.webkit.org/265223@main>

Reviewed commits have been landed. Closing PR #15022 and removing active labels.