The HTMLPreloadScanner ignores the referrerpolicy attribute for img elements https://bugs.webkit.org/show_bug.cgi?id=258164

Reviewed by Ryosuke Niwa.

Parse the referrerpolicy attribute for img tags inside the HTMLPreloadScanner,
like we already do for some other tags.

* LayoutTests/imported/w3c/web-platform-tests/html/syntax/speculative-parsing/generated/document-write/img-src-referrerpolicy-no-referrer.tentative.sub-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/syntax/speculative-parsing/generated/page-load/img-src-referrerpolicy-no-referrer.tentative-expected.txt:
* Source/WebCore/html/parser/HTMLPreloadScanner.cpp:
(WebCore::TokenPreloadScanner::StartTagScanner::processAttribute):

Canonical link: https://commits.webkit.org/265223@main